--- a/css/style.less
+++ b/css/style.less
@@ -1,19 +1,7 @@
-@mobile-widts: ~"(max-width: 767px)";
 @tablet-widts: ~"(min-width: 768px)";
 @desktop-widts: ~"(min-width: 1920px)";
 
-.container() {
-  width: 320px;
-  margin: 0 auto;
 
-  @media @tablet-widts {
-    width: 750px;
-  }
-
-  @media @desktop-widts {
-    width: 1532px;
-  }
-}
 
 @font-face {
   font-family: ProximaNova;
@@ -39,27 +27,59 @@
 body {
   margin: 0 auto;
   min-width: 320px;
-  max-width: 1920px;
 }
 
 .main-header {
+   display: flex;
+   flex-direction: column;
    background: url("../img/background.jpg") no-repeat center top;
    background-size: cover;
+   min-height: 568px;
+
+   &__wrapper {
+      display: flex;
+      flex-direction: column;
+   }
+
+   &__tagline {
+      width: 290px;
+   }
+
+   &__appeal {
+        float: right;
+   }
 }
 
-@media @mobile-widts {
+a,
+p {color: white;}
 
+.main-header__tagline {
+  font: bold 32px/31.32px "ProximaNova", "Arial", sans-serif;
+  text-transform: uppercase;
+}
 
-  .main-header {
-    min-height: 568px;
-  }
+.main-header__site-category {
+  display: none;
 }
 
 
 @media @tablet-widts {
   .main-header {
-
     min-height: 960px;
+
+    &__wrapper {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    &__site-category {
+      display: block;
+    }
+
+    &__tagline {
+      font: bold 64px/31.32px "ProximaNova", "Arial", sans-serif;
+      width: 590px;
+    }
   }
 }
 
