--- a/css/style.less
+++ b/css/style.less
@@ -32,6 +32,8 @@ body {
 .main-header {
    display: flex;
    flex-direction: column;
+   align-items: center;
+   justify-content: space-between;
    background: url("../img/background.jpg") no-repeat center top;
    background-size: cover;
    min-height: 568px;
@@ -42,25 +44,38 @@ body {
    }
 
    &__tagline {
+      display: flex;
+      flex-direction: column;
+      font: bold 32px/31.32px "ProximaNova", "Arial", sans-serif;
+      text-transform: uppercase;
       width: 290px;
    }
 
    &__appeal {
-        float: right;
+      margin-left: 60px;
+   }
+
+   &__site-category {
+      display: none;
+    }
+
+   &__navigation {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      width: 320px;
+   }
+
+   &__navigation a {
+      font: 12/auto "ProximaNova", "Arial", sans-serif;
+      color: #9071ea;
+      text-transform: uppercase;
+      text-decoration: none;
    }
 }
 
 a,
 p {color: white;}
-
-.main-header__tagline {
-  font: bold 32px/31.32px "ProximaNova", "Arial", sans-serif;
-  text-transform: uppercase;
-}
-
-.main-header__site-category {
-  display: none;
-}
 
 
 @media @tablet-widts {
@@ -70,6 +85,7 @@ p {color: white;}
     &__wrapper {
       flex-direction: row;
       justify-content: space-between;
+      align-self: stretch;
     }
 
     &__site-category {
@@ -77,14 +93,29 @@ p {color: white;}
     }
 
     &__tagline {
+      align-self: center;
       font: bold 64px/31.32px "ProximaNova", "Arial", sans-serif;
       width: 590px;
+    }
+
+    &__dowload-mobile {
+      order: 3;
+    }
+
+    &__navigation {
+      width: 700px;
     }
   }
 }
 
 @media @desktop-widts {
   .main-header {
-
+    padding: 0 200px;
   }
+
+  &__tagline {
+      align-self: center;
+      font: bold 90px/31.32px "ProximaNova", "Arial", sans-serif;
+      width: 1532px;
+    }
 }
