--- a/css/style.less
+++ b/css/style.less
@@ -1,6 +1,8 @@
 @tablet-widts: ~"(min-width: 768px)";
 @desktop-widts: ~"(min-width: 1920px)";
-
+@purpul: #5e42b0;
+@grey: #e3e3e7;
+@dark-grey: #c1c1c1;
 
 
 @font-face {
@@ -27,58 +29,383 @@
 body {
   margin: 0 auto;
   min-width: 320px;
+  max-width: 1920px;
 }
 
 .main-header {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: space-between;
-   background: url("../img/background.jpg") no-repeat center top;
-   background-size: cover;
-   min-height: 568px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 568px;
+  padding: 0 20px;
+  background: url("../img/background.jpg") no-repeat center top;
+  background-size: cover;
 
-   &__wrapper {
-      display: flex;
-      flex-direction: column;
-   }
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    margin-top: 35px;
+    color: #e3e3e7;
+  }
 
-   &__tagline {
-      display: flex;
-      flex-direction: column;
-      font: bold 32px/31.32px "ProximaNova", "Arial", sans-serif;
+  &__tagline {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    font: bold 32px/40px "ProximaNova", "Arial", sans-serif;
+    text-transform: uppercase;
+    width: 290px;
+    color: #fff;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: -50px;
+      left: 47%;
+      transform: rotate(40deg);
+      width: 4px;
+      height: 220px;
+      background: @purpul;
+    }
+  }
+
+  &__ready {
+    margin: 0;
+    z-index: 1;
+  }
+
+  &__appeal {
+    z-index: 1;
+    margin: 5px 0 5px 50px;
+  }
+
+  &__site-category {
+    display: none;
+  }
+
+  &__navigation {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 290px;
+  }
+
+  &__navigation a {
+    padding: 0 10px;
+    font: lighter 12px/34px "ProximaNova", "Arial", sans-serif;
+    color: #9071ea;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+}
+
+.download-mobile {
+  display: flex;
+  justify-content: space-between;
+  width: 290px;
+
+  .btn-download {
+    width: 90px;
+    padding: 10px 0 10px 53px;
+    border-radius: 20px;
+    font: lighter 8px/10px "ProximaNova", "Arial", sans-serif;
+    text-decoration: none;
+    text-transform: uppercase;
+    background: @purpul url("../img/sprite-download.png") no-repeat;
+    color: #e1dcf0;
+
+    span {
+      color: #fff;
+      font-weight: bold;
+    }
+  }
+
+  .btn-app {
+    background-position: 8px -3px;
+    background-size: 30%;
+  }
+
+  .btn-gp {
+    background-position: 13px -46px;
+    background-size: 30%;
+  }
+}
+
+.athlets,
+.players {
+  position: relative;
+}
+
+.athlets h2,
+.players h2 {
+  margin-bottom: 245px;
+  padding: 0 20px;
+  text-transform: uppercase;
+  color: @grey;
+  font: bold 50px/60px "ProximaNova", "Arial", sans-serif;
+}
+
+.characteristic {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+  li {
+    padding: 80px 20px;
+    display: none;
+    background: #f5f4f9;
+    font: bold 15px/18px "ProximaNova", "Arial", sans-serif;
+  }
+
+  h3 {
+    text-transform: uppercase;
+    color: @dark-grey;
+    font: bold 28px/34px "ProximaNova", "Arial", sans-serif;
+    margin: 0;
+
+    .enumeration {
+      position: relative;
+      padding-right: 10px;
+      font: bold 14px/30px "ProximaNova", "Arial", sans-serif;
+      color: #000;
+      vertical-align: top;
+
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: -3px;
+        left: 0;
+        border-radius: 5px;
+        height: 4px;
+        width: 17px;
+        background: @purpul;
+      }
+    }
+  }
+}
+
+.athlets input[type="radio"],
+.players input[type="radio"] {
+  display: none;
+}
+
+#btn-1:checked ~ .characteristic li:nth-child(1),
+#btn-2:checked ~ .characteristic li:nth-child(2),
+#btn-3:checked ~ .characteristic li:nth-child(3) {
+  display: block;
+}
+
+#btn-1:checked ~ .slider-controls label[for="btn-1"],
+#btn-2:checked ~ .slider-controls label[for="btn-2"],
+#btn-3:checked ~ .slider-controls label[for="btn-3"],
+#btn-players1:checked ~ .slider-controls label[for="btn-players1"],
+#btn-players2:checked ~ .slider-controls label[for="btn-players2"],
+#btn-players3:checked ~ .slider-controls label[for="btn-players3"] {
+  background: @purpul;
+}
+
+#btn-players1:checked ~ .characteristic li:nth-child(1),
+#btn-players2:checked ~ .characteristic li:nth-child(2),
+#btn-players3:checked ~ .characteristic li:nth-child(3) {
+  display: block;
+}
+
+.slider-controls {
+  position: absolute;
+  bottom: 27px;
+  left: 50%;
+  display: flex;
+  justify-content: space-between;
+  width: 55px;
+}
+
+.athlets label,
+.players label {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  cursor: pointer;
+  background: #d8d8d8;
+}
+
+.athlets img {
+  position: absolute;
+  top: 80px;
+  left: 50%;
+  margin-left: -80px;
+}
+
+.players img {
+  position: absolute;
+  top: 80px;
+  right: 50%;
+  margin-right: -155px;
+}
+
+.advantages {
+
+  &__routine {
+    position: relative;
+
+    &--enumeration {
+      position: absolute;
+      bottom: -10px;
+      margin: 0 20px;
+      padding: 20px 28px 30px;
+      font: bold 14px/20px "ProximaNova", "Arial", sans-serif;
+      color: #f5f6f7;
+      background: @purpul;
+    }
+
+    &--enumeration::after {
+      position: absolute;
+      bottom: 40%;
+      left: 40%;
+      content: "";
+      width: 16px;
+      height: 4px;
+      border-radius: 5px;
+      background: #8f7bc8;
+    }
+
+  img {
+    width: 100%;
+    vertical-align: middle;
+  }
+}
+
+  &__description {
+    padding: 0 20px;
+    font: bold 16px/20px "ProximaNova", "Arial", sans-serif;
+
+    p {
+      position: relative;
+      padding-bottom: 50px;
+    }
+
+    p::after {
+      position: absolute;
+      bottom: 20px;
+      left: 0;
+      content: "";
+      width: 22px;
+      height: 5px;
+      border-radius: 5px;
+      background: @purpul;
+    }
+  }
+
+  h2 {
+    color: @grey;
+    text-transform: uppercase;
+    font: bold 28px/34px "ProximaNova", "Arial", sans-serif;
+  }
+}
+
+.main-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 20px;
+  background: url("../img/footer-background.jpg") no-repeat center;
+  background-size: cover;
+
+  &__exhortation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    p {
+      position: relative;
+      color: #9b8ec1;
       text-transform: uppercase;
-      width: 290px;
-   }
+      font: bold 15px "ProximaNova", "Arial", sans-serif;
+      z-index: 1;
 
-   &__appeal {
-      margin-left: 60px;
-   }
+      &::after {
+        content: "";
+        position: absolute;
+        right: 107px;
+        top: -38px;
+        width: 5px;
+        height: 155px;
+        transform: rotate(40deg);
+        background: @purpul;
+        z-index: -1;
+      }
 
-   &__site-category {
+      &::before {
+        content: "";
+        position: absolute;
+        left: 28px;
+        top: -12px;
+        width: 5px;
+        height: 90px;
+        background: @purpul;
+        transform: rotate(40deg);
+        z-index: -1;
+      }
+
+      .download {
+        color: #fff;
+        font: bold 34px "ProximaNova", "Arial", sans-serif;
+      }
+    }
+
+    img {
+      padding: 90px 0;
+    }
+  }
+
+  .download-mobile {
+    padding: 130px 0;
+  }
+
+  &__bottom {
+    width: 100%;
+    background: rgba(12,18,53,0.6);
+
+    img {
       display: none;
     }
 
-   &__navigation {
+    .social {
+      width: 130px;
+      padding: 15px 0;
+      margin: 0 auto;
       display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      width: 320px;
-   }
+      justify-content: space-between;
 
-   &__navigation a {
-      font: 12/auto "ProximaNova", "Arial", sans-serif;
-      color: #9071ea;
-      text-transform: uppercase;
-      text-decoration: none;
-   }
+      &__social-btn {
+        width: 25px;
+        height: 20px;
+        font-size: 0;
+        background: url("../img/sprite.svg") no-repeat;
+        background-size: cover;
+      }
+
+      .social-fc {
+        background-position: -24px 0px;
+      }
+
+      .social-tw {
+        background-position: -59px 0px;
+      }
+
+      .social-in {
+        background-position: 2px 0px;
+      }
+    }
+
+    .about-us {
+      display: none;
+    }
+  }
 }
 
-a,
-p {color: white;}
-
-
 @media @tablet-widts {
+
   .main-header {
     min-height: 960px;
 
@@ -89,33 +416,422 @@ p {color: white;}
     }
 
     &__site-category {
+      font-size: 14px;
+      text-transform: uppercase;
+      color: #f2f2f4;
       display: block;
     }
 
     &__tagline {
       align-self: center;
-      font: bold 64px/31.32px "ProximaNova", "Arial", sans-serif;
+      font: bold 64px/64px "ProximaNova", "Arial", sans-serif;
       width: 590px;
+
+      &::after {
+        width: 6px;
+        height: 400px;
+        top: -100px;
+      }
     }
 
-    &__dowload-mobile {
+    &__appeal {
+      margin-left: 100px;
+    }
+
+    .download-mobile {
       order: 3;
+      width: 655px;
+      margin-bottom: 90px;
+
+      .btn-download {
+        width: 200px;
+        padding: 19px 0 19px 108px;
+        border-radius: 40px;
+        font: lighter 14px/20px "ProximaNova", "Arial", sans-serif;
+      }
+
+      .btn-app {
+        background-position: 15px -10px;
+      }
+
+      .btn-gp {
+        background-position: 25px -102px;
+      }
     }
 
     &__navigation {
-      width: 700px;
+        width: 700px;
+
+      a {
+        font: 16px/34px "ProximaNova", "Arial", sans-serif;
+      }
+    }
+  }
+
+  .slider-controls {
+    display: none;
+  }
+
+  .characteristic {
+
+    h3 {
+      font-size: 36px;
+
+      .enumeration {
+        font: bold 18px/20px "ProximaNova", "Arial", sans-serif;
+
+        &::after {
+          width: 20px;
+          height: 5px;
+          bottom: -6px;
+        }
+      }
+    }
+
+    p {
+      font: bold 18px/28px "ProximaNova", "Arial", sans-serif;
+    }
+
+    li {
+      padding: 40px 20px;
+    }
+
+    li:nth-child(1) {
+      display: block;
+      background: #fff;
+    }
+
+    li:nth-child(2) {
+      display: block;
+    }
+
+    li:nth-child(3) {
+      display: block;
+      background: #5e42b0;
+
+      .enumeration:after {
+        background: #efefef;
+      }
+
+      p {
+        color: #e1dcf0;
+      }
+    }
+  }
+
+  .athlets {
+    h2 {
+      font: bold 90px/60px "ProximaNova", "Arial", sans-serif;
+      margin-bottom: 0;
+      padding-left: 40%;
+    }
+
+    img {
+      position: absolute;
+      top: 0;
+      left: 0;
+      margin-left: 0;
+    }
+
+    .characteristic {
+      li {
+        padding-left: 40%;
+      }
+    }
+  }
+
+  .players {
+    h2 {
+      font: bold 90px/60px "ProximaNova", "Arial", sans-serif;
+      margin-bottom: 0;
+      padding-right: 40%;
+    }
+
+    img {
+      position: absolute;
+      top: -60px;
+      right: 0;
+      margin-right: 0;
+    }
+
+    .characteristic {
+      li {
+        padding-right: 50%;
+      }
+
+      li:nth-child(3) {
+        display: block;
+        background: #0a0e34;
+        .enumeration {
+          color: #9173e6;
+        }
+      }
+    }
+  }
+
+  .advantages {
+    &__routine {
+      &--enumeration {
+        font-size: 24px;
+        padding: 42px 46px 54px 46px;
+      }
+
+      &--enumeration::after {
+        width: 22px;
+        height: 5px;
+        left: 41%;
+      }
+    }
+
+    &__description {
+
+      h2 {
+        margin-bottom: 40px;
+        font: bold 90px/60px "ProximaNova", "Arial", sans-serif;
+      }
+
+      p {
+        font: bold 24px/28px "ProximaNova", "Arial", sans-serif;
+      }
+    }
+  }
+
+  .main-footer {
+    &__exhortation {
+      p {
+        font: bold 35px/60px "ProximaNova", "Arial", sans-serif;
+
+        &::before {
+          width: 5px;
+          height: 200px;
+          left: 65px;
+          top: -42px;
+        }
+
+        &::after {
+          width: 5px;
+          height: 415px;
+          right: 235px;
+          top: -140px;
+        }
+
+        .download {
+          font: bold 80px/60px "ProximaNova", "Arial", sans-serif;
+        }
+      }
+    }
+
+    .download-mobile {
+      width: 655px;
+      margin-bottom: 90px;
+
+      .btn-download {
+        width: 200px;
+        padding: 19px 0 19px 108px;
+        border-radius: 40px;
+        font: lighter 14px/20px "ProximaNova", "Arial", sans-serif;
+      }
+
+      .btn-app {
+        background-position: 15px -10px;
+      }
+
+      .btn-gp {
+        background-position: 25px -102px;
+      }
+    }
+
+    &__bottom {
+
+      .social {
+        width: 145px;
+        padding: 25px 0;
+
+        &__social-btn {
+          width: 35px;
+          height: 30px;
+          font-size: 0;
+          background: url("../img/sprite.svg") no-repeat;
+          background-size: cover;
+        }
+
+        .social-fc {
+          background-position: -36px 0px;
+        }
+
+        .social-tw {
+          background-position: -91px 0px;
+        }
+
+        .social-in {
+          background-position: 3px 0px;
+        }
+      }
     }
   }
 }
 
 @media @desktop-widts {
   .main-header {
-    padding: 0 200px;
+    padding: 0 193px;
+    justify-content: flex-start;
+
+    &__tagline {
+      width: 1532px;
+      margin-top: 300px;
+      align-self: center;
+      font: bold 90px "ProximaNova", "Arial", sans-serif;
+
+      &::after {
+        left: 32%;
+        transform: rotate(32deg);
+      }
+    }
+
+    &__appeal {
+      margin-left: 28%;
+      z-index: inherit;
+    }
+
+    .download-mobile {
+      width: 675px;
+      margin: auto;
+    }
+
+    &__navigation {
+      margin-left: auto;
+    }
   }
 
-  &__tagline {
-      align-self: center;
-      font: bold 90px/31.32px "ProximaNova", "Arial", sans-serif;
-      width: 1532px;
+  .athlets {
+    h2 {
+      margin: 6% 0 20px 0;
+      padding: 0 10% 0 50%;
     }
+
+    img {
+      top: -12%;
+      left: 10%;
+    }
+
+    .characteristic {
+      li {
+        padding: 3% 10% 3% 50%;
+      }
+    }
+  }
+  .players {
+    h2 {
+      margin: 6% 0 20px 0;
+      padding: 0 50% 0 10%;
+    }
+
+    img {
+      top: -18%;
+      right: 10%;
+    }
+
+    .characteristic {
+      li {
+        padding: 3% 50% 3% 10%;
+      }
+    }
+  }
+  .advantages {
+    display: flex;
+    align-items: center;
+
+    &__description {
+      margin: 0 auto;
+      width: 35%;
+
+      h2 {
+        font: bold 90px/90px "ProximaNova", "Arial", sans-serif;
+      }
+
+      p {
+        width: 60%;
+        padding-bottom: 90px;
+      }
+
+      p::after {
+        bottom: 0;
+      }
+    }
+
+    &__routine {
+
+      &--enumeration {
+        right: -80px;
+        bottom: 50%;
+        margin: 0;
+        padding: 61px 70px;
+        line-height: 34px;
+      }
+
+      &--enumeration::after {
+        left: 44%;
+      }
+    }
+  }
+  .advantages:nth-child(2n) {
+    flex-direction: row-reverse;
+  }
+
+  .advantages:nth-child(2n) .advantages__routine--enumeration {
+    right: inherit;
+    left: -80px;
+  }
+
+  .main-footer {
+    &__exhortation {
+      flex-direction: row;
+      padding-top: 230px;
+
+      p {
+        margin-top: 55px;
+        padding-left: 38px;
+
+        &::before {
+          width: 6px;
+          height: 206px;
+          left: 65px;
+          top: -42px;
+          transform: rotate(35deg);
+        }
+
+        &::after {
+          width: 6px;
+          right: 250px;
+          top: -145px;
+          transform: rotate(35deg);
+        }
+
+        .download {
+          font-size: 90px;
+        }
+      }
+    }
+
+    &__bottom {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      img {
+        display: block;
+      }
+
+      .social {
+        width: 175px;
+        margin: 0;
+      }
+      .about-us {
+        display: block;
+        text-transform: capitalize;
+        font: 20px "ProximaNova", "Arial", sans-serif;
+        color: #fff;
+      }
+    }
+  }
 }
